changed the file structure, and all paths pointing to the files

--- a/pages/politicians/chi.html
+++ b/pages/politicians/chi.html
@@ -19,7 +19,7 @@
 				<img
 					width="65"
 					height="50"
-					src="../../assets/DBG logo.svg"
+					src="../../assets/SSG logo.svg"
 					alt="SSG logo"
 				/>
 			</a>
@@ -92,7 +92,7 @@
 		<footer>
 			<!-- LOGO -->
 			<div class="logo-container">
-				<img src="../../assets/footer/footer DBG logo.svg" alt="ssg logo" />
+				<img src="../../assets/footer/footer SSG logo.svg" alt="ssg logo" />
 			</div>
 
 			<!-- CONTACT US -->
@@ -104,7 +104,7 @@
 							<img
 								width="26"
 								height="30"
-								src="../../assets/footer/footer-icons/email-icon.svg"
+								src="../../assets/footer/footer-contact-icons/email-icon.svg"
 								alt="mail icon"
 							/>
 						</span>
@@ -116,7 +116,7 @@
 							<img
 								width="30"
 								height="30"
-								src="../../assets/footer/footer-icons/phone-icon.svg"
+								src="../../assets/footer/footer-contact-icons/phone-icon.svg"
 								alt="phone icon"
 							/>
 						</span>
@@ -128,7 +128,7 @@
 							<img
 								width="30"
 								height="30"
-								src="../../assets/footer/footer-icons/location-icon.svg"
+								src="../../assets/footer/footer-contact-icons/location-icon.svg"
 								alt="location icon"
 							/>
 						</span>
@@ -188,7 +188,7 @@
 						<li>Partyporgram 2021-2025</li>
 					</a>
 					<a href="#">
-						<li>Why DBG</li>
+						<li>Why SSG</li>
 					</a>
 					<a href="#">
 						<li>What we've done for you</li>
