--- a/pages/politicians/krillin.html
+++ b/pages/politicians/krillin.html
@@ -18,7 +18,7 @@
 				<img
 					width="65"
 					height="50"
-					src="../../assets/DBG logo.svg"
+					src="../../assets/SSG logo.svg"
 					alt="SSG logo"
 				/>
 			</a>
@@ -91,7 +91,7 @@
 		<footer>
 			<!-- LOGO -->
 			<div class="logo-container">
-				<img src="../../assets/footer/footer DBG logo.svg" alt="ssg logo" />
+				<img src="../../assets/footer/footer SSG logo.svg" alt="ssg logo" />
 			</div>
 
 			<!-- CONTACT US -->
@@ -103,7 +103,7 @@
 							<img
 								width="26"
 								height="30"
-								src="../../assets/footer/footer-icons/email-icon.svg"
+								src="../../assets/footer/footer-contact-icons/email-icon.svg"
 								alt="mail icon"
 							/>
 						</span>
@@ -115,7 +115,7 @@
 							<img
 								width="30"
 								height="30"
-								src="../../assets/footer/footer-icons/phone-icon.svg"
+								src="../../assets/footer/footer-contact-icons/phone-icon.svg"
 								alt="phone icon"
 							/>
 						</span>
@@ -127,7 +127,7 @@
 							<img
 								width="30"
 								height="30"
-								src="../../assets/footer/footer-icons/location-icon.svg"
+								src="../../assets/footer/footer-contact-icons/location-icon.svg"
 								alt="location icon"
 							/>
 						</span>
@@ -187,7 +187,7 @@
 						<li>Partyporgram 2021-2025</li>
 					</a>
 					<a href="#">
-						<li>Why DBG</li>
+						<li>Why SSG</li>
 					</a>
 					<a href="#">
 						<li>What we've done for you</li>
