--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<header>
 			<a href="index.html">
-				<img width="65" height="50" src="assets/DBG logo.svg" alt="SSG logo" />
+				<img width="65" height="50" src="assets/SSG logo.svg" alt="SSG logo" />
 			</a>
 			<nav>
 				<ul>
@@ -38,8 +38,8 @@
 
 			<section>
 				<aside>
-					<a href="pages/sign-up.html">Join SSG</a>
-					<a href="pages/about-ssg.html">Learn more...</a>
+					<a href="pages/sign-up.html">About SSG</a>
+					<a href="pages/about-ssg.html">Join ssg</a>
 				</aside>
 				<ul>
 					<li>
@@ -47,7 +47,7 @@
 							<img
 								width="30"
 								height="30"
-								src="assets/icons/social-icons/tw-icon.svg"
+								src="assets/index-icons/social-icons/tw-icon.svg"
 								alt="twitter icon"
 							/>
 						</a>
@@ -58,7 +58,7 @@
 							<img
 								width="30"
 								height="30"
-								src="assets/icons/social-icons/ig-icon.svg"
+								src="assets/index-icons/social-icons/ig-icon.svg"
 								alt="instagram icon"
 							/>
 						</a>
@@ -69,7 +69,7 @@
 							<img
 								width="30"
 								height="30"
-								src="assets/icons/social-icons/fb-icon.svg"
+								src="assets/index-icons/social-icons/fb-icon.svg"
 								alt="facebook icon"
 							/>
 						</a>
@@ -80,7 +80,7 @@
 							<img
 								width="30"
 								height="30"
-								src="assets/icons/social-icons/yt-icon.svg"
+								src="assets/index-icons/social-icons/yt-icon.svg"
 								alt="youtube icon"
 							/>
 						</a>
@@ -89,6 +89,15 @@
 			</section>
 		</main>
 
+		<aside>
+			<a href="pages/blog.html">
+				<p>Blog</p>
+				<img
+					src="assets/index-icons/enter-site-button.svg"
+					alt="arrow pointing down"
+				/>
+			</a>
+		</aside>
 		<section class="showcase">
 			<video
 				src="assets/video-files/landing-page-bg-video.mp4"
