changed the links of the buttons, because about ssg was linking to sign up, and sign up was linking to about

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 			<section>
 				<aside>
-					<a href="pages/sign-up.html">About SSG</a>
-					<a href="pages/about-ssg.html">Join ssg</a>
+					<a href="pages/about-ssg.html">About SSG</a>
+					<a href="pages/sign-up.html">Join ssg</a>
 				</aside>
 				<ul>
 					<li>
